--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Хьюстон</title>
+    <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
+  <div class="block">
     <h1>Хьюстон</h1>
     <p><b>Хьюстон</b> (англ. Houston) — четвёртый по количеству жителей город в Соединённых Штатах Америки
         и крупнейший город в штате Техас с населением 2 319 603 человека на 2017 год. Хьюстон является
@@ -65,8 +67,8 @@
     </ol>    
     <h1 id="anchor">История</h1>
     <h2 id="anchor2">Этимология, прозвища</h2>
-    <img src="/Хьюстон/image/Sam_Houston_portrait.jpg" alt="Сэмюэл Хьюстон">
-    <p>Сэмюэл Хьюстон</p>
+    <img src="/image/Sam_Houston_portrait.jpg" alt="Сэмюэл Хьюстон">
+    <h3>Сэмюэл Хьюстон</h3>
     <p>Город назван в честь Сэмюэла Хьюстона — главнокомандующего армией Техаса во время Техасской
         революции (1835—1836) и президента Республики Техас (1836—1838, 1841—1844).
     </p>
@@ -81,8 +83,8 @@
         проходили съёмки фильма «Аполлон-13», в основу сюжета которого легли реальные события миссии.
     </p>
     <h2 id="anchor3">Основание</h2>
-    <img src="/Хьюстон/image/Allen's_Landing_Houston_bayou_view.jpg" alt="Allen’s Landing ">
-    <p> Allen’s Landing — место, где был основан город</p>
+    <img src="/image/Allen's_Landing_Houston_bayou_view.jpg" alt="Allen’s Landing ">
+    <h3> Allen’s Landing — место, где был основан город</h3>
     <p>
         После окончания войны за независимость Техаса, в августе 1836 года предприниматели братья Август
         и Джон Аллены купили 26,9 км² земли вдоль реки Буффало-Байю, планируя основать на ней
@@ -99,8 +101,8 @@
         Первым мэром Хьюстона стал Джеймс Холман.
     </p>
     <h2 id="anchor4">ХХ век</h2>
-    <img src="/Хьюстон/image/Main_Street_looking_south_Houston_Texas_(1908).jpg" alt="Мэйн-Стрит в центре, 1908 год">
-    <p>Мэйн-Стрит в центре, 1908 год</p>
+    <img src="/image/Main_Street_looking_south_Houston_Texas_(1908).jpg" alt="Мэйн-Стрит в центре, 1908 год">
+    <h3>Мэйн-Стрит в центре, 1908 год</h3>
     <p>
         В 1900 году на Хьюстон обрушился Галвестонский ураган, продолжавшийся с 27 августа по 12
         сентября. В пересчете на сегодняшний курс ущерб составил бы $526 млн, погибло 8 тысяч человек. В
@@ -130,8 +132,8 @@
     </p>
     <h1 id="anchor5">Физико-географическая характеристика</h1>
     <h2 id="anchor6">Географическое положение и климат</h2>
-    <img src="/Хьюстон/image/Large_Houston_Landsat.jpg" alt="Хьюстон со спутника Landsat 7">
-    <p>Хьюстон со спутника Landsat 7</p>
+    <img src="/image/Large_Houston_Landsat.jpg " alt="Хьюстон со спутника Landsat 7">
+    <h3>Хьюстон со спутника Landsat 7</h3>
     <p>
         Хьюстон расположен в 50 километрах от Мексиканского залива на прибрежной равнине.
         Значительная часть города была построена на лесных угодьях, болотах и прериях, они до сих пор
@@ -155,7 +157,7 @@
         покров.
 
     </p>
-    <table>
+    <table class="table">
         <caption><b>Дни с ясной и дождливой погодой в месяц (суммарно по часам)</b></caption>
         <tr>
             <th>Месяц</th>
@@ -230,8 +232,8 @@
         земной поверхности.
     </p>
     <h2 id="anchor8">Флора и фауна</h2>
-    <img src="/Хьюстон/image/Discovery_green.jpg" alt="Парк Discovery green в центре Хьюстона">
-    <p>Парк Discovery green в центре Хьюстона</p>
+    <img src="/image/Discovery_green.jpg" alt="Парк Discovery green в центре Хьюстона">
+    <h3>Парк Discovery green в центре Хьюстона</h3>
     <p>В флоре и фауне округа Харрис преобладают виды животных и растений, обитающих в болотных
         местностях, так как значительная часть города построена на болотах и прериях.
     </p>
@@ -249,7 +251,7 @@
     </p>
     <h1 id="anchor9">Экономика</h1>
     <h2 id="anchor10">Общее состояние</h2>
-    <table>
+    <table class="table">
     <caption><b> Крупнейшие компании, базирующиеся в Хьюстоне по версии Fortune 500 на 2016 год.</b></caption>    
         <tr>
             <th>Техас</th>
@@ -367,8 +369,8 @@
             <td>493</td>
         </tr>
     </table>
-    <img src="/Хьюстон/image/Houston_Ship_Channel.jpg" alt="Хьюстонский судоходный канал">
-    <p>Хьюстонский судоходный канал</p>
+    <img class="body-img" src="/image/Houston_Ship_Channel.jpg " alt="Хьюстонский судоходный канал">
+    <h3>Хьюстонский судоходный канал</h3>
     <p>Хьюстон является одним из ведущих городов мира в сферах добычи и переработки нефти и
         природного газа, из-за чего часто именуется «энергетической столицей мира», а также
         биомедицинских исследований и аэронавтики. Также Хьюстон имеет репутацию «зелёного города»,
@@ -395,8 +397,8 @@
         входящих в список Fortune 500. Хьюстон является членом Всемирного партнёрства энергетических
         городов.
     </p>
-    <img src="/Хьюстон/image/Enron_Complex.jpg" alt="Офис компании Chevron в Хьюстоне">
-    <p>Одной из самых крупных компаний, обеспечивающих электроэнергией город, является компания
+    <img src="/image/Enron_Complex.jpg" alt="Офис компании Chevron в Хьюстоне">
+    <h3>Одной из самых крупных компаний, обеспечивающих электроэнергией город, является компания
         CenterPoint Energy, которая поставляет электричество не только для Техаса, но и для Арканзаса,
         Луизианы, Миннесоты, Миссисипи, Оклахомы. Услугами компании пользуются более 5 млн человек.
         Другая крупная энергетическая компания Calpine занимает 42 место в Техасе и 402 в США в рейтинге
@@ -407,7 +409,7 @@
         электростанция в пиковом режиме способна производить 842 мегаватт (базовая электрическая
         мощность — 782 МВт). На территории метрополии Большого Хьюстона действует восемь
         электростанций Calpine.
-    </p>
+    </h3>
     <p>Хьюстон является одним из крупнейших производственных центров мира для нефтехимической
         промышленности. В городе располагаются больше 3 700 организаций, работающих в сфере
         нефтехимии. Также в хьюстонском регионе находятся 9 нефтеперерабатывающих заводов,
@@ -418,8 +420,8 @@
         (38,7 % от всего производства в США), поливинилхлорида (35,9 %) и полипропилена (48,4 %)
     </p>
     <h2 id="anchor12">Авиакосмическая промышленность</h2>
-    <img src="/Хьюстон/image/Aerial_View_of_the_Johnson_Space_Center.jpg" alt="Космический центр им. Джонсона">
-    <p>Космический центр им. Джонсона</p>
+    <img src="/image/Aerial_View_of_the_Johnson_Space_Center.jpg" alt="Космический центр им. Джонсона">
+    <h3>Космический центр им. Джонсона</h3>
     <p>В Хьюстоне располагается космический центр имени Линдона Джонсона, представляющий собой
         научно-исследовательское и проектно-конструкторское предприятие, в котором работают 15000
         человек (3000 инженеров и учёных, 12000 остальных рабочих). Всего в городе располагаются больше
@@ -442,7 +444,7 @@
     </p>
     <h1 id="anchor13">Население</h1>
     <h2 id="anchor14">Динамика и структура населения</h2>
-    <table>
+    <table class="table">
         <caption><b>Перепись населения</b></caption>    
             <tr>
                 <th>Год переписи</th>
@@ -536,8 +538,8 @@
             </tr>
     </table>
     <p>1850-2017 Переписи населения в 1790—2010 годах</p>
-    <img src="/Хьюстон/image/Race_and_ethnicity_2010_Houston.png" alt="Этническая карта Хьюстона">
-    <p>Этническая карта Хьюстона</p>
+    <img src="/image/Race_and_ethnicity_2010_Houston.png" alt="Этническая карта Хьюстона">
+    <h3>Этническая карта Хьюстона</h3>
     <p>Согласно данным переписи населения США в 2010 году в городе проживало 2 100 263 человек, это на
         7,5 % больше, чем в 2000 году. По оценке бюро переписи населения США на 1 января 2017 года
         население составило 2 319 603 человека. Население города, начиная с его основания, постоянно
@@ -571,12 +573,12 @@
         0,53 % — иудаизм. Всего исповедуют религию 58,4 % хьюстонцев, 41,6 % — неверующие.
     </p>
     <h2 id="anchor16">Средства массовой информации</h2>
-    <img src="/Хьюстон/image/Melcher_Center_for_Public_Broadcasting.jpg" alt="Вещательный центр, откуда вещают радиостанции KUHT и KUHF">
-    <p>В Хьюстоне вещают 19 телеканалов. Наиболее известные телеканалы являются аффилированными
+    <img src="/image/Melcher_Center_for_Public_Broadcasting.jpg" alt="Вещательный центр, откуда вещают радиостанции KUHT и KUHF">
+    <h3>В Хьюстоне вещают 19 телеканалов. Наиболее известные телеканалы являются аффилированными
         каналами крупных телекомпаний: KPRC-TV (NBC), KHOU-TV (CBS), KTRK-TV (ABC), KRIV (Fox),
         KIAH (The CW) и KTXH (MyNetworkTV). Телеканал KUHT является членом национальной
         общественной телевещательной службы PBS.
-    </p>
+    </h3>
     <p>В Хьюстоне вещают 29 радиостанций. Одна из крупнейших радиостанций, KUHF, принадлежит
         Хьюстонской университетской системе.
     </p>
@@ -592,7 +594,7 @@
     <p>Согласно городскому сайту, у Хьюстона 18 городов-побратимов (в последний раз этот список
         расширялся в 2015 году, когда к нему присоединилась Басра):
     </p>
-    <ul>
+    <ul class="table">
         <li>Абу-Даби (ОАЭ);</li>
         <li>Абердин (Шотландия);</li>
         <li>Гуаякиль (Эквадор);</li>
@@ -611,6 +613,7 @@
         <li>Тиба (Япония);</li>
         <li>Шэньчжэнь (Китай);</li>
         <li>Басра (Ирак)</li>
-    </ul> 
+    </ul>
+</div>
 </body>
 </html>
